--- a/rental-platform/frontend/package.json
+++ b/rental-platform/frontend/package.json
@@ -8,25 +8,17 @@
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview",
-        "test": "vitest",
-        "test:ui": "vitest --ui"
+        "preview": "vite preview"
     },
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.17.0",
         "axios": "^1.5.1",
-        "react-hook-form": "^7.47.0",
-        "react-query": "^3.39.3",
         "zustand": "^4.4.3",
         "@heroicons/react": "^2.0.18",
-        "lucide-react": "^0.288.0",
-        "@headlessui/react": "^1.7.17",
         "clsx": "^2.0.0",
-        "date-fns": "^2.30.0",
-        "react-hot-toast": "^2.4.1",
-        "framer-motion": "^10.16.4"
+        "react-hot-toast": "^2.4.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
@@ -39,8 +31,7 @@
         "autoprefixer": "^10.4.16",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.3.5",
-        "vite": "^4.4.5",
-        "vitest": "^0.34.6"
+        "vite": "^4.4.5"
     },
     "engines": {
         "node": ">=18.0.0",
