--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,4 @@
 # Backend API URL
 # Update this with your Django backend URL
 VITE_API_URL=http://localhost:8000/api
+VITE_API_URL=http://192.168.1.101:8000/api/v1
