--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,10 @@
 Django==4.2.7
 djangorestframework==3.14.0
 
+# Database
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
+
 # Authentication
 djangorestframework-simplejwt==5.3.0
 
@@ -13,9 +17,6 @@ Pillow==10.1.0
 
 # Environment variables
 python-decouple==3.8
-
-# Database (PostgreSQL for production)
-psycopg2-binary==2.9.9
 
 # Development tools
 django-extensions==3.2.3
